fixed hp card content stretch

--- a/assets/styles/styles-performances.css
+++ b/assets/styles/styles-performances.css
@@ -1666,7 +1666,10 @@ nav.ul::after {
               flex-direction: column;
       -webkit-box-pack: justify;
           -ms-flex-pack: justify;
-              justify-content: space-between
+              justify-content: space-between;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start
   }
  }
 .slidecards__card-wrapper.n-1 {
