--- a/sources/styles/performances/modules/_slidecards.css
+++ b/sources/styles/performances/modules/_slidecards.css
@@ -90,6 +90,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      align-items: flex-start;
     }
 
     &.n-1 {
